Website Publish (2.1.4) — Fixed language portfolio issue — Fixed padding on mobile manifesto cards

--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ padding-left: 0px;  }
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 92vh;
     background-color: var(--color-primary-dark);
     color: var(--color-background-2);
     z-index: 1;       
@@ -1610,12 +1610,12 @@ p {
 
     .cta-wrapper {
         position: absolute;
-        bottom: 350px;
+        bottom: 43vh;
         flex-direction: row;
         align-items: flex-start;
         gap: 10px;
         width: 100%;
-        margin-top: 290px;
+        margin-top: 100vh;
     }
     .scg-wrap {
         position: relative;
